# localsearch

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  update-homebrew.yml
examples/: local_model_example.rs
scripts/: install.bat  install.ps1  install.sh  release.sh
src/: config.rs  embed.rs  lib.rs  main.rs  search.rs  traits.rs
src/engines/: sqlite.rs
tests/: embed_integration.rs
