[package]
name = "localsearch"
version = "0.1.0"
edition = "2024"
authors = ["Naveen Anto <nnanto@github.com>"]
description = "A fast, local search engine with vector embeddings and SQLite storage"
license = "MIT"
repository = "https://github.com/nnanto/local_search"
homepage = "https://github.com/nnanto/local_search"
documentation = "https://docs.rs/local_search"
keywords = ["search", "embeddings", "sqlite", "vector", "semantic"]
categories = ["text-processing", "database"]
readme = "README.md"

[dependencies]
env_logger = "0.11.8"
log = "0.4.29"
rusqlite = {"version" = "0.38.0", features = ["bundled"]}
fastembed = "4.1.0"
anyhow = "1.0.100"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0"}

# CLI-only dependencies (optional)
clap = { version = "4.5.54", features = ["derive"], optional = true }
colored = { version = "3.0.0", optional = true }
clap-verbosity-flag = { version = "2.0.1", optional = true }

[dev-dependencies]
tempfile = "3.8"

[features]
default = []
cli = ["clap", "colored", "clap-verbosity-flag"]

[lib]
name = "localsearch"
path = "src/lib.rs"


[[bin]]
name = "local-search"
path = "src/bin/main.rs"
required-features = ["cli"]