[package]
name = "localsearch"
version = "1.0.1"
edition = "2024"
authors = ["Naveen Anto <nnanto@github.com>"]
description = "A fast, local search engine with vector embeddings and SQLite storage"
license = "MIT"
repository = "https://github.com/nnanto/localsearch"
homepage = "https://github.com/nnanto/localsearch"
documentation = "https://docs.rs/localsearch"
keywords = ["search", "embeddings", "sqlite", "vector", "semantic"]
categories = ["text-processing", "database"]
readme = "README.md"

[dependencies]
env_logger = "0.11.8"
log = "0.4.29"
rusqlite = {"version" = "0.38.0", features = ["bundled"]}
fastembed = { version = "4.9.1", default-features = false, features = ["ort-download-binaries", "hf-hub-rustls-tls"] }
anyhow = "1.0.100"
serde = { version = "1.0", features = ["derive"] }
directories = "5.0"
serde_json = { version = "1.0"}

# CLI-only dependencies (optional)
clap = { version = "4.5.54", features = ["derive"], optional = true }
colored = { version = "3.0.0", optional = true }
clap-verbosity-flag = { version = "2.0.1", optional = true }

# Override HTTP clients to use rustls instead of native-tls (OpenSSL)
# This allows building without OpenSSL dependencies
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }

[dev-dependencies]
tempfile = "3.8"

[features]
default = []
cli = ["clap", "colored", "clap-verbosity-flag"]

[lib]
name = "localsearch"
path = "src/lib.rs"


[[bin]]
name = "localsearch"
path = "src/bin/main.rs"
required-features = ["cli"]

# Release profile optimizations for smaller, faster binaries
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true